# Objektinis2

./: .gitignore  CMakeLists.txt  Iv_Isv.h  README.md  funkcijos.h  generavimas.cpp  generavimas.h  headeriai.h  ived_isved.cpp  main.cpp  papildomos.h  papildomos_funkcijos.cpp  studentas.cpp  studentas.h  tyrimai.cpp  tyrimai.h
include/: bibliotekos.h  funkcijos.h  studentas.h
src/: CMakeLists.txt  ived_isved.cpp  main.cpp  papildomos_funkcijos.cpp  studentas.cpp  tyrimai.cpp
tests/: CMakeLists.txt  studentas_tests.cpp
